df2-backend/staging/ing.patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delicious-fruit
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - df2.api.staging.iwannacommunity.com
      secretName: df2.api.staging.iwannacommunity.com
  rules:
    - host: df2.api.staging.iwannacommunity.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: delicious-fruit-staging
                port:
                  name: http
